<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetMe</string>
    <string name="action_settings">Settings</string>

    <string-array name="menu_options">
        <item>Main</item>
        <item>Map</item>
        <item>Events</item>
        <item>Today</item>
        <item>Accepted</item>
        <item>Friends</item>
        <item>Settings</item>
    </string-array>

    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_creatEvent">Sign up</string>
    <string name="title_activity_map">Map</string>
    <string name="App_logo">Application logo</string>
    <string name="Avatar_image">Avatar</string>
    <string name="ContentDescription">blabla</string>
    <string name="ContentDescription">blabla</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="Email">Email</string>
    <string name="Username">Username</string>
    <string name="Phone">Phone</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Register_button">Register</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="Event_name">Name of event</string>
    <string name="Event_decritption">Description</string>
    <string name="Event_date">Date</string>
    <string name="Event_time">Time</string>
    <string name="Event_address">Address</string>
    <string name="Event_image">Image</string>
    <string name="Create_button">Create Event</string>
    <string name="Choose_image">Choose image&#8230;</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_createEvent">Create Event</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="MainThreadOperationException">Attempting to run async operations on main thread.</string>
	
    <string name="error_invalid_date">This date is invalid</string>
    <string name="error_invalid_time">This time format is invalid</string>
    <string name="creating_event">Creating event&#8230;</string>
    <string name="creating_event_task">Creation</string>
</resources>