<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RegisterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ImageButton_Avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/Avatar_image"
            android:src="@android:drawable/ic_dialog_info" />

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/EditText_Firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/First_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" >
            </EditText>

            <EditText
                android:id="@+id/EditText_Lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Last_name"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/EditText_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/EditText_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout05"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="20sp"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/EditText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:maxLines="1" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/Button_OK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7979F2"
        android:layout_marginBottom="2dp"
        android:text="@string/Ok_button" />

</LinearLayout>